# opm-utilities

docker_opm_user/: Dockerfile
opm-ci-builder/patches/dune-grid/: 0001-gpu_patch.patch
opm-ci-builder/patches/pybind11/: 0001-no_static.patch
opm-ci-builder/resinsight/: Dockerfile  build.sh
opm-ci-builder/resinsight/scripts/: setup_system_options.sh
opm-ci-builder/resinsight/tests/: CMakeLists.txt  build.sh
opm-ci-builder/scripts/: build_debug.sh  patch_system.sh  setup_system_options.sh
opm-ci-builder/tests/: build.sh
opm-ci-builder/toolchains/: coverage_gcov.cmake  serial_shared.cmake  shared.cmake
release-scripts/: opm-backport-pr.sh  opm-release-install-test.sh
